--- a/index.html
+++ b/index.html
@@ -3,22 +3,25 @@
 <head>
 <meta charset="UTF-8" />
 <title>Galaxy View</title>
+
 <style>
 html, body {
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100%;
   background: black;
   overflow: hidden;
   font-family: Arial, sans-serif;
   color: white;
 }
 
-#ui {
+canvas {
   position: absolute;
-  top: 10px;
-  left: 220px;
-  font-size: 14px;
-  line-height: 1.4;
+  left: 0;
+  top: 0;
+  background: black;
+  z-index: 1;
 }
 
 #fleetPanel {
@@ -30,6 +33,16 @@ html, body {
   background: #0c0f12;
   border-right: 1px solid #222;
   padding: 10px;
+  z-index: 5;
+}
+
+#ui {
+  position: absolute;
+  top: 10px;
+  left: 220px;
+  font-size: 14px;
+  line-height: 1.4;
+  z-index: 5;
 }
 
 .fleetItem {
@@ -45,11 +58,14 @@ html, body {
 }
 </style>
 </head>
+
 <body>
 
 <div id="fleetPanel">
   <strong>FLEETS</strong>
-  <div id="fleet1" class="fleetItem active">Fleet 1<br><small>IDLE</small></div>
+  <div id="fleet1" class="fleetItem active">
+    Fleet 1<br><small>IDLE</small>
+  </div>
 </div>
 
 <div id="ui">
@@ -64,9 +80,6 @@ html, body {
 <canvas id="canvas"></canvas>
 
 <script>
-/* ==========================
-   CANVAS + CAMERA
-========================== */
 const canvas = document.getElementById("canvas");
 const ctx = canvas.getContext("2d");
 
@@ -77,26 +90,19 @@ function resize() {
 window.addEventListener("resize", resize);
 resize();
 
-const camera = {
-  x: 0,
-  y: 0,
-  zoom: 1
-};
+/* CAMERA */
+const camera = { x: 0, y: 0, zoom: 1 };
 
-/* ==========================
-   WORLD DATA
-========================== */
+/* WORLD */
 const stars = [];
 for (let i = 0; i < 40; i++) {
   stars.push({
-    x: Math.random() * 4000 - 2000,
-    y: Math.random() * 4000 - 2000
+    x: Math.random() * 2000 - 1000,
+    y: Math.random() * 2000 - 1000
   });
 }
 
-/* ==========================
-   FLEET MODEL
-========================== */
+/* FLEET */
 const fleet = {
   x: 0,
   y: 0,
@@ -108,58 +114,43 @@ const fleet = {
 
 let selectedFleet = fleet;
 
-/* ==========================
-   CAMERA CENTER (FIXED)
-========================== */
+/* CAMERA CENTER */
 function centerCameraOnFleet() {
   camera.x = selectedFleet.x;
   camera.y = selectedFleet.y;
 }
-
-/* CENTER ON FIRST LOAD */
 centerCameraOnFleet();
 
-/* ==========================
-   INPUT STATE
-========================== */
-let isDragging = false;
+/* INPUT */
+let dragging = false;
 let lastMouse = { x: 0, y: 0 };
 let previewTarget = null;
 let paused = false;
 
-/* ==========================
-   MOUSE EVENTS
-========================== */
+/* MOUSE */
 canvas.addEventListener("mousedown", e => {
-  isDragging = true;
+  dragging = true;
   lastMouse.x = e.clientX;
   lastMouse.y = e.clientY;
 });
 
-canvas.addEventListener("mouseup", () => {
-  isDragging = false;
-});
+window.addEventListener("mouseup", () => dragging = false);
 
-canvas.addEventListener("mousemove", e => {
-  if (isDragging) {
-    const dx = (e.clientX - lastMouse.x) / camera.zoom;
-    const dy = (e.clientY - lastMouse.y) / camera.zoom;
-    camera.x -= dx;
-    camera.y -= dy;
-    lastMouse.x = e.clientX;
-    lastMouse.y = e.clientY;
-  }
+window.addEventListener("mousemove", e => {
+  if (!dragging) return;
+  camera.x -= (e.clientX - lastMouse.x) / camera.zoom;
+  camera.y -= (e.clientY - lastMouse.y) / camera.zoom;
+  lastMouse.x = e.clientX;
+  lastMouse.y = e.clientY;
 });
 
 canvas.addEventListener("wheel", e => {
-  const zoomFactor = e.deltaY > 0 ? 0.9 : 1.1;
-  camera.zoom *= zoomFactor;
+  e.preventDefault();
+  camera.zoom *= e.deltaY > 0 ? 0.9 : 1.1;
   camera.zoom = Math.max(0.2, Math.min(5, camera.zoom));
-});
+}, { passive: false });
 
-/* ==========================
-   CLICK → PREVIEW / CONFIRM
-========================== */
+/* CLICK */
 canvas.addEventListener("click", e => {
   const wx = (e.clientX - canvas.width / 2) / camera.zoom + camera.x;
   const wy = (e.clientY - canvas.height / 2) / camera.zoom + camera.y;
@@ -168,114 +159,92 @@ canvas.addEventListener("click", e => {
     previewTarget = { x: wx, y: wy };
   } else {
     selectedFleet.target = { ...previewTarget };
-    const dx = selectedFleet.target.x - selectedFleet.x;
-    const dy = selectedFleet.target.y - selectedFleet.y;
-    const dist = Math.hypot(dx, dy);
-    selectedFleet.eta = dist / selectedFleet.speed;
+    const d = Math.hypot(
+      selectedFleet.target.x - selectedFleet.x,
+      selectedFleet.target.y - selectedFleet.y
+    );
+    selectedFleet.eta = d / selectedFleet.speed;
     selectedFleet.state = "MOVING";
     previewTarget = null;
   }
 });
 
-/* ==========================
-   KEYBOARD
-========================== */
+/* KEYS */
 window.addEventListener("keydown", e => {
   if (e.code === "Escape") previewTarget = null;
   if (e.code === "Space") paused = !paused;
 });
 
-/* ==========================
-   FLEET PANEL CLICK
-========================== */
+/* PANEL */
 document.getElementById("fleet1").onclick = () => {
-  selectedFleet = fleet;
-  document.querySelectorAll(".fleetItem").forEach(el => el.classList.remove("active"));
-  document.getElementById("fleet1").classList.add("active");
   centerCameraOnFleet();
 };
 
-/* ==========================
-   UPDATE LOOP
-========================== */
-let lastTime = performance.now();
-function update(time) {
-  const dt = (time - lastTime) / 1000;
-  lastTime = time;
+/* LOOP */
+let last = performance.now();
+function loop(t) {
+  const dt = (t - last) / 1000;
+  last = t;
 
-  if (!paused && selectedFleet.state === "MOVING") {
-    const dx = selectedFleet.target.x - selectedFleet.x;
-    const dy = selectedFleet.target.y - selectedFleet.y;
-    const dist = Math.hypot(dx, dy);
+  if (!paused && fleet.state === "MOVING") {
+    const dx = fleet.target.x - fleet.x;
+    const dy = fleet.target.y - fleet.y;
+    const d = Math.hypot(dx, dy);
 
-    if (dist < 1) {
-      selectedFleet.x = selectedFleet.target.x;
-      selectedFleet.y = selectedFleet.target.y;
-      selectedFleet.target = null;
-      selectedFleet.state = "IDLE";
-      selectedFleet.eta = 0;
+    if (d < 1) {
+      fleet.x = fleet.target.x;
+      fleet.y = fleet.target.y;
+      fleet.state = "IDLE";
+      fleet.target = null;
     } else {
-      selectedFleet.x += (dx / dist) * selectedFleet.speed * dt;
-      selectedFleet.y += (dy / dist) * selectedFleet.speed * dt;
-      selectedFleet.eta -= dt;
+      fleet.x += (dx / d) * fleet.speed * dt;
+      fleet.y += (dy / d) * fleet.speed * dt;
+      fleet.eta -= dt;
     }
   }
 
   draw();
-  requestAnimationFrame(update);
+  requestAnimationFrame(loop);
 }
 
-/* ==========================
-   DRAW
-========================== */
+/* DRAW */
 function draw() {
-  ctx.setTransform(1, 0, 0, 1, 0, 0);
-  ctx.clearRect(0, 0, canvas.width, canvas.height);
+  ctx.setTransform(1,0,0,1,0,0);
+  ctx.clearRect(0,0,canvas.width,canvas.height);
 
-  ctx.translate(canvas.width / 2, canvas.height / 2);
+  ctx.translate(canvas.width/2, canvas.height/2);
   ctx.scale(camera.zoom, camera.zoom);
   ctx.translate(-camera.x, -camera.y);
 
-  // Stars
   ctx.fillStyle = "white";
   stars.forEach(s => {
     ctx.beginPath();
-    ctx.arc(s.x, s.y, 2, 0, Math.PI * 2);
+    ctx.arc(s.x, s.y, 2, 0, Math.PI*2);
     ctx.fill();
   });
 
-  // Preview line
   if (previewTarget) {
     ctx.strokeStyle = "red";
-    ctx.setLineDash([6, 6]);
+    ctx.setLineDash([6,6]);
     ctx.beginPath();
-    ctx.moveTo(selectedFleet.x, selectedFleet.y);
+    ctx.moveTo(fleet.x, fleet.y);
     ctx.lineTo(previewTarget.x, previewTarget.y);
     ctx.stroke();
     ctx.setLineDash([]);
-    ctx.fillStyle = "red";
-    ctx.beginPath();
-    ctx.arc(previewTarget.x, previewTarget.y, 4, 0, Math.PI * 2);
-    ctx.fill();
   }
 
-  // Fleet
   ctx.fillStyle = "lime";
   ctx.beginPath();
-  ctx.arc(selectedFleet.x, selectedFleet.y, 6, 0, Math.PI * 2);
+  ctx.arc(fleet.x, fleet.y, 6, 0, Math.PI*2);
   ctx.fill();
 
-  if (selectedFleet.state === "MOVING") {
-    ctx.fillStyle = "lime";
-    ctx.fillText(
-      `MOVING (${selectedFleet.eta.toFixed(1)}s)`,
-      selectedFleet.x + 10,
-      selectedFleet.y - 10
-    );
+  if (fleet.state === "MOVING") {
+    ctx.fillText(`MOVING (${fleet.eta.toFixed(1)}s)`,
+      fleet.x + 10, fleet.y - 10);
   }
 }
 
-requestAnimationFrame(update);
+requestAnimationFrame(loop);
 </script>
 </body>
 </html>
